# admin-panel

./: Cargo.toml  index.html
src/: app.rs  main.rs  routes.rs
src/pages/: dashbord.rs  login.rs  mod.rs  setting.rs  users.rs
